--- a/jumbotron.css
+++ b/jumbotron.css
@@ -292,7 +292,7 @@ medium {
     /*background: #2098d1;*/
     position: relative;
     /*top: 90px;*/
-    top: 55px;
+    /*top: 55px;*/
     /*padding: 114px;*/
     padding-top: 119px;
     padding-bottom: 25px;
@@ -305,6 +305,21 @@ medium {
 
 #title {
   font-size: 40px;
+}
+
+
+/*SERIVCE Sections*/
+.service {
+  padding-top: 25px;
+}
+
+.FB {
+  font-size: 25px;
+  color: #4267b2;
+}
+
+.FB-content {
+  font-size: 15px;
 }
 
 footer {
