page size adjustment

--- a/jumbotron.css
+++ b/jumbotron.css
@@ -134,15 +134,17 @@ a {
   color: white;
 }
 
+
+
 .main {
   position: relative;
   /*top: 50px;*/
 }
 
-@media (max-width: 1199px) {
+/*@media (max-width: 1199px) {
   .main {
     height: 200px;
-}
+}*/
 
 .home-page-content {
   padding: 0px;
@@ -151,6 +153,7 @@ a {
   top: 350px;
   z-index: 1;
 }
+
 
 @media (max-width: 730px) {
   .home-page-content {
@@ -187,6 +190,7 @@ a {
   color: black;
   z-index: 1;
 }
+
 
 /*@media (max-width: 420px){
   .home-page-content {
@@ -462,7 +466,12 @@ textarea {
       /*background: #2098d1;*/
     }
   
-
+    @media (max-width: 1199px) {
+      .main {
+        height: 200px;
+        padding: 20px;
+        background: black;
+    }
 
 
 
